erDiagram
    USERS ||--o{ MONTHLY_CYCLES : "manages (admin)"
    MONTHLY_CYCLES ||--o{ PATIENT_RECORDS : "contains"
    PATIENT_RECORDS ||--o{ CASE_PAYMENTS : "installments (CASE only)"
    PATIENT_RECORDS }o--|| LABS : "assigned to (CASE only)"
    MONTHLY_CYCLES ||--|| MONTHLY_FINANCIALS : "summarized by"

    USERS {
        uuid id PK
        string username
        string password_hash
        enum role "ADMIN or ASSISTANT"
    }

    MONTHLY_CYCLES {
        uuid id PK
        string month_year
        enum status "OPEN or CLOSED"
    }

    LABS {
        uuid id PK
        string lab_name
    }

    PATIENT_RECORDS {
        uuid id PK
        uuid cycle_id FK
        string patient_id "unique per cycle, e.g. 0001/26"
        date entry_date
        string patient_name
        string address "optional"
        enum category "GP or CASE"
        string diagnosis
        decimal total_cost
        string lab_name "CASE only, optional"
        date lab_send_date "CASE only, optional"
        date delivery_date "CASE only, optional"
        decimal paid "CASE only, sum of payments"
        decimal remaining "CASE only, total_cost - paid"
        uuid lab_id FK "FK to LABS, CASE only"
        decimal lab_fee "admin-assigned, CASE only"
        enum lab_payment_status "PAID or UNPAID, CASE only, admin-only"
        boolean is_carried_forward "CASE only, false for GP"
    }

    CASE_PAYMENTS {
        uuid id PK
        uuid record_id FK
        date payment_date
        decimal paid_amount
        string payment_note
        enum payment_status "PAID or UNPAID, CASE only, drives carry-forward"
    }

    MONTHLY_FINANCIALS {
        uuid id PK
        uuid cycle_id FK
        decimal total_gp
        decimal total_case
        decimal gross_income
        decimal lab_fee
        decimal relieving_fee
        decimal general_expenses
        decimal assistant_fee
        decimal bonus
        decimal utility_costs
        decimal building_rent
        decimal net_profit
    }

    %% UI Display Note:
    %% Record table is split into two tabbed views:
    %%   Tab 1: GP Records (entry_date, patient_name, diagnosis, total_cost)
    %%   Tab 2: Case Records (entry_date, patient_name, diagnosis, total_cost, balance, status, carried-forward)
    %% GP has no installments, no balance, no status column.
    %% Case tracks installments via CASE_PAYMENTS, shows balance and status.
